[project]
name = "raycloudsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib==3.5.3",
    "networkx==2.8.8",
    "numpy<2.0.0",
    "opencv-python==4.9.0.80",
    "pandas==2.0.3",
    "pyqt5>=5.15.11",
    "simpy==4.1.1",
    "tensorboard==2.14.0",
    "tqdm==4.66.2",
]
